--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>PokeDex</title>
     <script src="setup.js"></script>
+    <script src="select-pokemon.js"></script>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
