Added rendering for type weaknesses

--- a/index.html
+++ b/index.html
@@ -25,12 +25,19 @@
     </div>
 
     <div id="current-pokemon-container" class="container column">
-      <div id="current-pokemon-img"></div>
       <div id="current-pokemon-info">
+        <!--Icon-->
+        <div id="current-pokemon-img"></div>
+
+        <!--Id, Name, Title-->
         <span id="current-pokemon-id"></span>
         <h2 id="current-pokemon-name"></h2>
         <span id="current-pokemon-title"></span>
+
+        <!--Type/s-->
         <div id="current-pokemon-types"></div>
+
+        <!--Flavour Text-->
         <h4>Pokédex Entry</h4>
         <span id="current-pokemon-flavour-text"></span>
         <div class="row center"></div>
@@ -65,7 +72,7 @@
             <h4>Weaknesses</h4>
             <div
               id="current-pokemon-weaknesses"
-              class="pokemon-info-container"
+              class="current-pokemon-weaknesses-container"
             ></div>
           </div>
           <div class="width-100 column center margin-5">
