--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     <div id="current-pokemon-container" class="container column">
       <div id="current-pokemon-info">
-        <!--Icon-->
-        <div id="current-pokemon-img"></div>
+        <!--Sprite-->
+        <img id="current-pokemon-sprite" ></img>
 
         <!--Id, Name, Title-->
         <span id="current-pokemon-id"></span>
