Added rendering for selected pokemon types, renamed div ids and classes for clarity

--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
       <div id="pokedex-list-render-container"></div>
     </div>
 
-    <div id="current-pokemon-container" class="container column">
-      <div id="current-pokemon-info">
+    <div id="selected-pokemon-container" class="container column">
+      <div id="selected-pokemon-info">
         <!--Sprite-->
-        <img id="current-pokemon-sprite" ></img>
+        <img id="selected-pokemon-sprite" ></img>
 
         <!--Id, Name, Title-->
-        <span id="current-pokemon-id"></span>
-        <h2 id="current-pokemon-name"></h2>
-        <span id="current-pokemon-title"></span>
+        <span id="selected-pokemon-id"></span>
+        <h2 id="selected-pokemon-name"></h2>
+        <span id="selected-pokemon-title"></span>
 
         <!--Type/s-->
-        <div id="current-pokemon-types"></div>
+        <div id="selected-pokemon-types"></div>
 
         <!--Flavour Text-->
         <h4>Pokédex Entry</h4>
-        <span id="current-pokemon-flavour-text"></span>
+        <span id="selected-pokemon-flavour-text"></span>
         <div class="row center"></div>
 
         <!--Abilities-->
-        <div id="current-pokemon-abilities-container">
+        <div id="selected-pokemon-abilities-container">
           <h4>Abilities</h4>
-          <div id="current-pokemon-abilities" class="row center"></div>
+          <div id="selected-pokemon-abilities" class="row center"></div>
         </div>
 
         <!--Height and Weight-->
@@ -53,14 +53,14 @@
           <div class="width-100 column center margin-5">
             <h4>Height</h4>
             <div
-              id="current-pokemon-height"
+              id="selected-pokemon-height"
               class="pokemon-info-container"
             ></div>
           </div>
           <div class="width-100 column center margin-5">
             <h4>Weight</h4>
             <div
-              id="current-pokemon-weight"
+              id="selected-pokemon-weight"
               class="pokemon-info-container"
             ></div>
           </div>
@@ -71,14 +71,14 @@
           <div class="width-100 column center margin-5">
             <h4>Weaknesses</h4>
             <div
-              id="current-pokemon-weaknesses"
-              class="current-pokemon-weaknesses-container"
+              id="selected-pokemon-weaknesses"
+              class="selected-pokemon-weaknesses-container"
             ></div>
           </div>
           <div class="width-100 column center margin-5">
             <h4>Base Exp</h4>
             <div
-              id="current-pokemon-base-exp"
+              id="selected-pokemon-base-exp"
               class="pokemon-info-container"
             ></div>
           </div>
@@ -87,55 +87,55 @@
         <!--Stats-->
         <h4>Stats</h4>
         <div class="row center">
-          <div class="current-pokemon-stats-container column">
-            <div class="current-pokemon-stats-icon" style="background: #df2140">
+          <div class="selected-pokemon-stats-container column">
+            <div class="selected-pokemon-stats-icon" style="background: #df2140">
               HP
             </div>
-            <h5 id="current-pokemon-stats-hp"></h5>
+            <h5 id="selected-pokemon-stats-hp"></h5>
           </div>
-          <div class="current-pokemon-stats-container column">
-            <div class="current-pokemon-stats-icon" style="background: #ff994d">
+          <div class="selected-pokemon-stats-container column">
+            <div class="selected-pokemon-stats-icon" style="background: #ff994d">
               ATK
             </div>
-            <h5 id="current-pokemon-stats-attack"></h5>
+            <h5 id="selected-pokemon-stats-attack"></h5>
           </div>
-          <div class="current-pokemon-stats-container column">
-            <div class="current-pokemon-stats-icon" style="background: #fedc52">
+          <div class="selected-pokemon-stats-container column">
+            <div class="selected-pokemon-stats-icon" style="background: #fedc52">
               DEF
             </div>
-            <h5 id="current-pokemon-stats-defense"></h5>
+            <h5 id="selected-pokemon-stats-defense"></h5>
           </div>
-          <div class="current-pokemon-stats-container column">
-            <div class="current-pokemon-stats-icon" style="background: #85ddff">
+          <div class="selected-pokemon-stats-container column">
+            <div class="selected-pokemon-stats-icon" style="background: #85ddff">
               SpA
             </div>
-            <h5 id="current-pokemon-stats-special-attack"></h5>
+            <h5 id="selected-pokemon-stats-special-attack"></h5>
           </div>
-          <div class="current-pokemon-stats-container column">
-            <div class="current-pokemon-stats-icon" style="background: #a8f08a">
+          <div class="selected-pokemon-stats-container column">
+            <div class="selected-pokemon-stats-icon" style="background: #a8f08a">
               SpD
             </div>
-            <h5 id="current-pokemon-stats-special-defense"></h5>
+            <h5 id="selected-pokemon-stats-special-defense"></h5>
           </div>
-          <div class="current-pokemon-stats-container column">
-            <div class="current-pokemon-stats-icon" style="background: #fb94a8">
+          <div class="selected-pokemon-stats-container column">
+            <div class="selected-pokemon-stats-icon" style="background: #fb94a8">
               SPD
             </div>
-            <h5 id="current-pokemon-stats-speed"></h5>
+            <h5 id="selected-pokemon-stats-speed"></h5>
           </div>
           <div
-            class="current-pokemon-stats-container column"
+            class="selected-pokemon-stats-container column"
             style="background: #8fb1ff"
           >
-            <div class="current-pokemon-stats-icon" style="background: #7395db">
+            <div class="selected-pokemon-stats-icon" style="background: #7395db">
               TOT
             </div>
-            <h5 id="current-pokemon-stats-total"></h5>
+            <h5 id="selected-pokemon-stats-total"></h5>
           </div>
         </div>
 
         <!--Evolution Chain-->
-        <div id="current-pokemon-evolution-chain-container">
+        <div id="selected-pokemon-evolution-chain-container">
           <h4>Evolution</h4>
           <div class="row center"></div>
         </div>
