fixed styling for type weaknesses and neighbours

--- a/index.html
+++ b/index.html
@@ -184,11 +184,10 @@
 
         <!--Prev/Next Pokemon-->
         <div id="selected-pokemon-neighbours">
-          <div id="button-wrapper" class="button-wrapper row center margin-5">
+          <div id="button-wrapper" class="button-wrapper row center margin-5 bold font-size-12">
             <button
               id="left-button"
               class="left-button"
-              onclick="console.log('Open left')"
             >
               <i class="fas fa-angle-left"></i>
               <img
@@ -201,7 +200,6 @@
             <button
               id="right-button"
               class="right-button"
-              onclick="console.log('Open right')"
             >
               <span id="right-neighbour-id">#396</span>
               <b id="right-neighbour-name">Fletchinder</b>
