cleaned up styling for evolution chain

--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
 
         <!--Prev/Next Pokemon-->
         <div id="selected-pokemon-neighbours">
-          <div id="button-wrapper" class="button-wrapper row center margin-5 bold font-size-12">
-            <button
-              id="left-button"
-              class="left-button"
-            >
+          <div
+            id="button-wrapper"
+            class="button-wrapper row center margin-5 bold font-size-12"
+          >
+            <button id="left-button" class="left-button">
               <i class="fas fa-angle-left"></i>
               <img
                 id="left-neighbour-sprite"
@@ -197,10 +197,7 @@
               <b id="left-neighbour-name">Prinplup</b>
               <span id="left-neighbour-id">#394</span>
             </button>
-            <button
-              id="right-button"
-              class="right-button"
-            >
+            <button id="right-button" class="right-button">
               <span id="right-neighbour-id">#396</span>
               <b id="right-neighbour-name">Fletchinder</b>
               <img
