added progress bar on load

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <body onload="setup()" class="row">
     <div id="loading-div">
       <img src="resources/pokeball-icon-large.png" class="loading-ball" />
+      <div class="progress-bar">
+        <div class="progress-bar-fill"></div>
+      </div>
     </div>
 
     <div id="pokedex-list" class="column">
