--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokéDex</title>
+    <script src="utils.js"></script>
+    <script src="animation.js"></script>
     <script src="setup.js"></script>
+    <script src="pokedex.js"></script>
     <script src="select-pokemon.js"></script>
     <link rel="stylesheet" href="style.css" />
     <link
